# zero2prod-axum

./: .dockerignore  .env.example  .gitignore  API_MIGRATION.md  ARCHITECTURE.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  README.md  SWAGGER_UI_SETUP.md  docker-compose.yml  grafana-datasource.yaml  lcov.info  lefthook.yml  loki-config.yaml  package-lock.json  promtail-config.yaml  test_dbs.txt
.config/: nextest.toml  nextext.toml
.cursor/architecture/: BLOG_AND_DARK_MODE_IMPLEMENTATION.md
.cursor/rules/: coding-codex.mdc  pr-review-workflow.mdc  rust.mdc  spec-strategy.mdc  styling.mdc  testing-strategy.mdc  type-script.mdc
.github/workflows/: audit.yml  general.yml
.sqlx/: query-01ecb3ebac32e8f5c499e5780a5bc9f2ec6a176dfe53389cd28cc1aa8925edff.json  query-0f1bdd79ba55b79b7190c0d64ee47a8e1fbe8fe68ff8c53e985149eb93bd6617.json  query-26b3864e0bbbb11e564d0e239b28c91c959beb5d6d8bc83718474cff8b24d2fb.json  query-30bf2f9d556d66b6a1397eafff366693f27c24b6303848480e5a6cc13e47831a.json  query-4897ed3869c79cb7cf517d381a661e2aad14bccdb9294d28cce41353b2f267bd.json  query-65eca9fc7c43975693073fbb43f40c0746a6f0c96aa591c3c88dd21525622570.json  query-664e8bd198384069077f5139f29f0723cac7c4730e905a96f88488a07126bbab.json  query-6d8a4f49d93d4a38774ff00c35ce38a011e04d157ed57a1bf1be5741f1e3a387.json  query-6f567f7e764cb441c5984b123976563b24be89ea38bf2e1d97307d3bc5484378.json  query-723b3d69fe4959b687a5d2a7a1d04f97ebf74b3ed9ad85f1b16c9dfdb62539dc.json  query-74f95d2c7eeb1cda00f68c2e4a1cd8e3ebff831c19ccef149af36bcbdb7a1b28.json  query-824576806628ad2c342ea69dfc53bf7cd7e04d314b69a4ffb80c4d28bb14c3df.json  query-849e67ceaf06a27e47a8f016e2f9ed11f56a1818ed955e51928de826a486e3b3.json  query-8616740ec7067939fccb579dbce44a3f39003d3243485525ee8b69811000efb2.json  query-959cff4307748b4c4058e61b501b4dd2a9e041baeaf5a27b5eaa2536209a9408.json  query-95ade9879b4196615f313fdeaed3daf9dc093283a7bb939d9d4d8f3f08d2c95f.json  query-95e0f5f1f8522018bbedbec9756d598173f45d7e2b150905d64dddaf9a938058.json  query-9a10104623c9f0117e3940e4f6e5fceeb026123faa18dfad136407725b33bcd4.json  query-a393f2e7de06c98d0cb6c43070fb0774e92fb4affca2f60eaafadbb66951b931.json  query-b67def84d29591610f6843bad09c15cca368227be2f9752b3a2e52fa1b3596e4.json  query-b734ca7fc21f9b6739f07b8f924946a5e789be87359e6975dbbfb595a6443a75.json  query-bb434aad15edf193e2cd77302133d899286b2bda790af9a042dcaea860edf45a.json  query-bb919eebf53336ee2987071abd66bf308460f937d3c8f77c7ff1a3dfbba4809d.json  query-c8d88a2b6eb72d4fa54fef72c2f1316d9692d05535fe421f19eb739a7b2b27d4.json  query-c9fd64d7eb2f9a166b7fa405bdfb3eb593fe2f42eb9c04e27278b2cac7125ae8.json  query-ca04d597ed5ef31c44f595c84556207498c685046daee97787f27eba8565e7e6.json  query-d4d83c99972fcfb8e106755c58febf8ce669c91873af1988ccb591a41fcbff77.json  query-e7d69add69609b594a826b3a2b55c5bac08a30b917e6ff8e525bb279ee86f931.json  query-e8c6ba9424e5adc9e077cd8ed6fc975d40acc6e6362abc11570630e0eb3dc1f0.json  query-ecec8342d444386947d15689189b388500011b201a625f64274bc94c9a5bb580.json  query-f9df95cf9269b81ad6c69fce17c755fde4dde68778065facf58f163acf2527ff.json  query-fd5c16eb615f1bf0ecdb3afb345906aa0dacd0b054b65a749995c3ea038463ab.json
configuration/: base.yaml  production.yaml
doc/: API_MIGRATION.md  ARCHITECTURE.md  REACT_MIGRATION_SUMMARY.md  SWAGGER_UI_DARK_MODE.md  SWAGGER_UI_SETUP.md
doc/features/: authentication.yaml  blog.yaml  blog.yml  newsletter.yaml
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx  styles.ts  theme.ts
frontend/src/api/: blog.ts  client.ts
frontend/src/components/: ErrorState.tsx  Layout.tsx  (+7 more)
frontend/tests/: KNOWN_ISSUES.md  README.md  backend-spawn-helpers.ts  constants.ts  fixtures.ts  frontend-server-helpers.ts  helpers.ts  init.ts  reporter.ts
migrations/: 20251201171926_create_subscriptions_table.sql  20251218171653_create_idempotency_table.sql  20251219095653_create_issue_delivery_queue_table.sql  20260127162625_remove_seed_user.sql  20260205185949_create_blog_posts_table.sql  20260219152454_add_cascade_delete_to_subscription_tokens.sql
scripts/: e2e-reminder.sh  init_backend_dockerized.sh  init_loki.sh  init_postgres.sh  init_redis.sh  notify.sh  run-e2e-background.sh  stop_all.sh  stop_backend.sh  stop_loki.sh  stop_postgres.sh  stop_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  flash_messages.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  startup_axum.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs  password_validation.rs
src/domain/: blog_post.rs  mod.rs  new_subscriber.rs  subscriber_email_address.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: constants.rs  health_check.rs  mod.rs  newsletters.rs  subscription_tokens.rs  subscriptions.rs  subscriptions_confirm.rs  subscriptions_unsubscribe.rs  test_helpers.rs  utils.rs
src/test_support/: helpers.rs  mod.rs  test_app.rs
tests/: health_check.rs
tests/api/: README.md  admin_dashboard.rs  blog.rs  change_password.rs  health_check.rs  helpers.rs  initial_password.rs  login.rs  macros.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  subscriptions_unsubscribe.rs  test_app.rs
tests/api-e2e/: main.rs  subscription_token.rs
tests/common/: helpers.rs  macros.rs  mod.rs  test_app.rs  test_data.rs
(+62 files in other folders)
