[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Michael Hrenka <radivis@radivis.com>"]
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4"
config = "0.14"
uuid = { version = "1", features = ["v4"] }
validator = "0.20"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
unicode-segmentation = "1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
claims = "0.7"
fake = "2.9"
rand = "0.8"
reqwest = "0.12.24"
quickcheck = "1.0.3"
quickcheck_macros = "1"