[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Michael Hrenka <radivis@radivis.com>"]
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.14"
once_cell = "1.21.3"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
validator = "0.20"

[dependencies.reqwest]
version = "0.12.24"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
claims = "0.7"
fake = "2.9"
linkify = "0.10"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8"
serde_json = "1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
wiremock = "0.6"