[package]
name = "zero2prod"
version = "0.1.0"
default-run = "zero2prod"
authors = ["Michael Hrenka <radivis@radivis.com>"]
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-sessions = "0.14"
tower-sessions-redis-store = "0.16"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
async-trait = "0.1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
config = "0.14"
once_cell = "1.21.3"
rand = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.20"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

# Dependencies needed for E2E test binary
wiremock = { version = "0.6", optional = true }
tracing-appender = { version = "0.2", optional = true }
linkify = { version = "0.10", optional = true }

[dependencies.reqwest]
version = "0.12.24"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["cookies", "json", "rustls-tls"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
claims = "0.7"
fake = "2.9"
linkify = "0.10"
quickcheck = "1.0.3"
quickcheck_macros = "1"
serde_json = "1"
serde_urlencoded = "0.7.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
wiremock = "0.6"
backtrace = "0.3"

[features]
default = []
e2e-tests = ["wiremock", "tracing-appender", "linkify"]

[[bin]]
name = "spawn_test_server"
path = "src/bin/spawn_test_server.rs"